# SDEC

./: .cproject  .mxproject  .project  CMakeLists.txt  README.md  Readme.md  SDEC.code-workspace  SDEC.ioc  platformio.ini
Application/: CMakeLists.txt  EntryPoint.cpp  st-inteface.cmake
Application/inc/: EntryPoint.hpp  EntryPointWrapper.h  Helpers.hpp
Core/Inc/: main.h  stm32f1xx_it.h
Core/Src/: dma.c  gpio.c  main.c  stm32f1xx_it.c  tim.c  usart.c
cmake/: st-project.cmake
include/: Helpers.hpp  common.hpp  config.hpp  debug.hpp  encoder.h  encoder.hpp  etl_profile.h  main.hpp
lib/CMSIS/: library.json
lib/CMSIS/RTOS2/RTX/Config/: RTE_Components.h
src/: Helpers.cpp  debug.cpp  defaulthandler.c  defaulthandler_cxx.cpp  encoder.cpp  encoderISR.c  main.cpp
